modification header grid

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
                     <li><a href="#Hebergements">Hébergements</a></li>  
                     <li><a href="#Activites">Activités</a></li>    
                 </ul>
+            </nav>
                 <div class="inscription">
                     <a href="#">S'inscrire</a>
                 </div>
-            </nav>
+            
             <div class="titre-principal">
                 <br>
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -175,9 +176,9 @@
                                     </div>
                                 </div>
                             </a>
-                        </article>
+                        </article>                        
                     </div>
-                    <h3>Afficher plus</h3>
+                    <h3 class="Afficher">Afficher plus</h3>
                 </div>
                 <!-- POPULAIRES -->
                 <aside class="populaire">
@@ -294,7 +295,7 @@
                 <h3>A propos</h3>
                 <p>Fonctionnement du site</p>
                 <p>Conditions générales de vente</p>
-                <p>données et confidentialité</p>
+                <p>Données et confidentialité</p>
             </div>
             <div>
                 <h3>Nos hébergements</h3>
