--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>    
             <img src="images/logo/Reservia.svg" alt="logo-reservia"/>
-            <nav  class="menu"  
+            <nav  class="menu"> 
                 <a href="#Hebergements">Hébergements</a> 
                 <a href="#Activites">Activités</a>                 
             </nav>
@@ -28,7 +28,7 @@
                     <input type="search">
                     <button>
                         <span class="texte-recherche"> Rechercher</span>
-                        <i class="fas fa-search"></i>
+                        <i class="fas fa-search icone-recherche"></i>
                     </button>
                 </div>
             </form> 
@@ -243,7 +243,7 @@
             <section class="section-activites">
                 <h2 id="Activites">Activités à Marseille</h2>
                 <div class="Activites">
-                    <div>
+                    <div class="bloc">
                         <a href="#">
                             <img class="img-1" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux-port">
                             <div class="titre-activite">
@@ -251,9 +251,10 @@
                             </div>
                         </a>
                     </div> 
-                    <div>   
-                        <a href="#">                                
-                            <img class="img-2" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort-de-pomegues">
+                    <div class="bloc">   
+                        <a href="#">                                   
+                            <img class="img-2 ta" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort-de-pomegues">
+
                             <div class="titre-activite ta">
                                 <h3>Fort de Pomègues</h3>
                             </div>
@@ -265,7 +266,7 @@
                             </div>
                         </a>              
                     </div>          
-                    <div>
+                    <div class="bloc">
                         <a href="#">
                             <img class="img-4" src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc-des-calanques">
                             <div class="titre-activite">
@@ -273,9 +274,9 @@
                             </div>
                         </a>
                     </div>                                
-                    <div>
+                    <div class="bloc">
                         <a href="#">
-                            <img class="img-5" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre-dame-de-la-garde">
+                            <img class="img-5 ta" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre-dame-de-la-garde">
                             <div class="titre-activite ta">
                                 <h3>Notre-Dame-de-la-Garde</h3>
                             </div>
