--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <a href="#Activites">Activités</a>                 
             </nav>
                 <div class="inscription">
-                  <a href="#">S'inscrire</a>         
+                  <a href="#">S'inscrire</a>
+                </div>         
             <div class="titre-principal">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
