--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <header>    
-            <img src="images/logo/Reservia.svg" alt="logo-reservia"/>
+            <img src="images/logo/Reservia.svg" width="97px" height="45px" alt="logo-reservia"/>
             <nav  class="menu"> 
                 <a href="#Hebergements">Hébergements</a> 
                 <a href="#Activites">Activités</a>                 
@@ -72,7 +72,7 @@
                     <h2 id="Hebergements">Hébergements à Marseille</h2>
                     <div class="article">
                         <article>
-                            <a href="#">                                
+                            <a href="#">                                 
                                 <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge-la-cannebiere">
                                 <div class="texte-hebergement">
                                     <h3>Auberge la Cannebière</h3>
@@ -91,8 +91,7 @@
                         </article>
                         
                         <article>
-                            <a href="#">
-
+                            <a href="#">                                
                                 <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel-du-port">
                                 <div class="texte-hebergement">
                                     <h3>Hôtel du port</h3>
@@ -108,10 +107,8 @@
                             </a>
                         </article>
                         <article>
-                            <a href="#">
-
+                            <a href="#">                             
                                 <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel-les-mouettes">
-
                                 <div class="texte-hebergement">
                                     <h3>Hôtel les mouettes</h3>
                                     <p>Nuit à partir de 76<b>€</b></p>
@@ -128,7 +125,7 @@
                             </a>
                         </article>
                         <article>
-                            <a href="#">
+                            <a href="#">                               
                                 <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel-de-la-mer">
                                 <div class="texte-hebergement">
                                     <h3>Hôtel de la mer</h3>
@@ -146,7 +143,7 @@
                             </a>
                         </article>
                         <article>
-                            <a href="#">
+                            <a href="#">                                
                                 <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge-le-panier">
                                 <div class="texte-hebergement">
                                     <h3>Auberge le Panier</h3>
@@ -164,7 +161,7 @@
                             </a>
                         </article>
                         <article>
-                            <a href="#">
+                            <a href="#">                                
                                 <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel-chez-amina">
                                 <div class="texte-hebergement">
                                     <h3>Hôtel chez Amina</h3>
@@ -245,7 +242,7 @@
                 <h2 id="Activites">Activités à Marseille</h2>
                 <div class="Activites">
                     <div class="bloc">
-                        <a href="#">
+                        <a href="#">                            
                             <img class="img-1" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux-port">
                             <div class="titre-activite">
                                 <h3>Vieux Port</h3>
@@ -269,7 +266,7 @@
                     </div>          
                     <div class="bloc">
                         <a href="#">
-                            <img class="img-4" src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc-des-calanques">
+                            <img class="img-4" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"alt="parc-des-calanques">                            
                             <div class="titre-activite">
                                 <h3>Parc National des Calanques</h3>
                             </div>
