--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <form>
                 <div class="recherche">
                     <i class="fas fa-map-marker-alt"></i>
-                    <input type="search">
+                    <input type="search" placeholder="Marseille, France">
                     <button>
                         <span class="texte-recherche"> Rechercher</span>
                         <i class="fas fa-search icone-recherche"></i>
