--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <header>    
-            <img src="images/logo/Reservia.svg" width="97px" height="45px" alt="logo-reservia"/>
+            <img src="images/logo/Reservia.svg" alt="logo-reservia"/>
             <nav  class="menu"> 
                 <a href="#Hebergements">Hébergements</a> 
                 <a href="#Activites">Activités</a>                 
@@ -266,7 +266,7 @@
                     </div>          
                     <div class="bloc">
                         <a href="#">
-                            <img class="img-4" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"alt="parc-des-calanques">                            
+                            <img class="img-4" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc-des-calanques">                            
                             <div class="titre-activite">
                                 <h3>Parc National des Calanques</h3>
                             </div>
